--- a/content/post/2017-02-19-关于海量话单排重问题的思考.md
+++ b/content/post/2017-02-19-关于海量话单排重问题的思考.md
@@ -82,7 +82,7 @@ print("need GB = ", bit_num / 8 / 1024 / 1024 / 1024)
 这边我们先测试下，一亿的key，用布隆过滤器排重效率怎么样。  
 首先看下一亿个key，控制误判率p=0.00001，大概需要多少内存，跑下程序：
 
-```
+``` shell
 ./bloomfilter.py 
 please input n:100000000
 please input error_rate:0.00001
