Markdown display adjust

--- a/content/post/2017-02-19-关于海量话单排重问题的思考.md
+++ b/content/post/2017-02-19-关于海量话单排重问题的思考.md
@@ -20,36 +20,37 @@ categories: ["Bigdata", "Bloom Filter", "Hbase"]
 ## 使用内存数据库的解决思路
 跟两周前博客写的一样，现在这两点需求一确认，热点数据很明显了，这一两天的话单就是热点数据，其他时间的话单只是很少一部分。那么方案就是这样的：  
 
-1. 把这一两天的话单按天在分布式内存数据库里建cache，cache只存key，其他时间的话单key都在HBase中。
-2. 有话单来，先判时间，是这一两天的，直接在对应时间的cache里做排重，没有重复的话，把key插入内存数据库，并且同步一份到HBase（HBase的LSM树写很快，随机读慢，大量写的场景很适合它）。
-3. 两天以前的话单，这是很小的数据量，直接甩给另一个进程或者线程到HBase里做排重，这边是随机读的场景，可能会慢，但是HBase毕竟资料丰富，网上也有很多高效随机读的解决方案，少量数据随机读是属于可以解决的问题。
-4. 过期数据清理，因为cache的数据HBase里也有，所以换天的时候，可以直接建新cache，把两天前的cache直接删了，不用考虑同步，HBase的数据清理，就换月把两个月前的key给清理了。  
+1. 把这一两天的话单按天在分布式内存数据库里建`cache`，`cache`只存`key`，其他时间的话单`key`都在`HBase`中。
+2. 有话单来，先判时间，是这一两天的，直接在对应时间的cache里做排重，没有重复的话，把`key`插入内存数据库，并且同步一份到`HBase`（`HBase`的`LSM`树写很快，随机读慢，大量写的场景很适合它）。
+3. 两天以前的话单，这是很小的数据量，直接甩给另一个进程或者线程到`HBase`里做排重，这边是随机读的场景，可能会慢，但是`HBase`毕竟资料丰富，网上也有很多高效随机读的解决方案，少量数据随机读是属于可以解决的问题。
+4. 过期数据清理，因为`cache`的数据`HBase`里也有，所以换天的时候，可以直接建新`cache`，把两天前的`cache`直接删了，不用考虑同步，HBase的数据清理，就换月把两个月前的`key`给清理了。  
 
 ### 方案缺陷
-1. 占大量内存空间，一天60亿话单的key，两天就是120亿，按每个key占100字节来算，加起来就是占12000亿字节，大概就是1118GB的内存，这个纯内存数据集群不小啦，如果没有这么多内存，那就退而求其次，保证一天的数据量，如果连存一天数据量的内存都没有，cache就要用持久化的缓存集群来做了，那又要开始考虑内存和磁盘数据淘汰机制了，这个场景一天之内的数据存在不存在热点数据并不好判断，大量读命中不了cache的话，缓存数据库反复内存和磁盘置换数据，磁盘io性能消耗太大，效率会不会太低了。
-2. 这么多内存存的话单key只为了这个需求服务，这么一大片的内存没有其他读写需求，是否值得呢？
- 
+1. 占大量内存空间，一天60亿话单的`key`，两天就是120亿，按每个`key`占100字节来算，加起来就是占12000亿字节，大概就是1118GB的内存，这个纯内存数据集群不小啦，如果没有这么多内存，那就退而求其次，保证一天的数据量，如果连存一天数据量的内存都没有，`cache`就要用持久化的缓存集群来做了，那又要开始考虑内存和磁盘数据淘汰机制了，这个场景一天之内的数据存在不存在热点数据并不好判断，大量读命中不了`cache`的话，缓存数据库反复内存和磁盘置换数据，磁盘`io`性能消耗太大，效率会不会太低了。
+2. 这么多内存存的话单`key`只为了这个需求服务，这么一大片的内存没有其他读写需求，是否值得呢？
+
 **那么有没有办法，时间稍微慢点，cache空间大大减小的方案呢**
 
 **在这个场景下，这个方法其实是存在的，这边先介绍个算法，然后再分析**
 
 ## 使用布隆过滤器的解决思路
 ### 算法介绍
-HBase这类数据库，为了增加随机读的效率，可以选择开启一个叫布隆过滤器(bloom filter)的算法。算法的详细介绍感兴趣可以参考[布隆过滤器详解](http://blog.csdn.net/lifuxiangcaohui/article/details/42025629)。这边就简要说下算法的思路：  
+`HBase`这类数据库，为了增加随机读的效率，可以选择开启一个叫布隆过滤器(`bloom filter`)的算法。算法的详细介绍感兴趣可以参考[布隆过滤器详解](http://blog.csdn.net/lifuxiangcaohui/article/details/42025629)。这边就简要说下算法的思路：  
+
 > 内存里开一个二进制全零阵列，把key通过k个hash函数，映射成阵列上的m个点。如果这m个点有一个点为0，则这个key没出现过，或者说不在前面的key构建的那个集合里，如果全1，则这个key，“可能”已经在这个集合里了。
 
-算法说key没出现过，那它肯定没出现过，说它出现过，则可能没出现过，只是概率比较小。不会漏判，但会误判，存在误判率，所以不适合对错误零容忍的场景。HBase用它来判断要读的key在不在这个region上。**(这边可能有人会奇怪，我们的场景不是零容忍场景么？漏话单这种事情肯定是不可接受的呀！！别急，看下去)**
+算法说`key`没出现过，那它肯定没出现过，说它出现过，则可能没出现过，只是概率比较小。不会漏判，但会误判，存在误判率，所以不适合对错误零容忍的场景。`HBase`用它来判断要读的`key`在不在这个`region`上。**(这边可能有人会奇怪，我们的场景不是零容忍场景么？漏话单这种事情肯定是不可接受的呀！！别急，看下去)**
 
 #### 算法优势
 1. 空间大幅度降低，每个数据都用几个二进制位来映射，只需维护这张位图就行了。
-2. 判重时间复杂度O(K)，跟数据量关系不大，和hash函数个数有关，基本上可以认为是常数级的时间复杂度了，速度非常快。
+2. 判重时间复杂度`O(K)`，跟数据量关系不大，和`hash`函数个数有关，基本上可以认为是常数级的时间复杂度了，速度非常快。
 
 #### 算法缺陷
 1. 存在误判率
 2. 不支持删除集合中某数据的映射
 
-误判率p和二进制阵列位数m以及数据量n的关系是，二进制阵列位数m越大，p约小，数据量n越大，p越大，具体公式和推导可以看上面的链接。  
-这边根据公式可以根据数据量n和能容忍的误判率p得出**最少**需要的hash函数个数，和内存容量。我把公式写成了python脚本。可以直接跑一下算得。
+误判率`p`和二进制阵列位数`m`以及数据量`n`的关系是，二进制阵列位数`m`越大，`p`约小，数据量`n`越大，`p`越大，具体公式和推导可以看上面的链接。  
+这边根据公式可以根据数据量`n`和能容忍的误判率`p`得出**最少**需要的`hash`函数个数，和内存容量。我把公式写成了`python`脚本。可以直接跑一下算得。
 
 ``` python
 #!/usr/bin/env python3
@@ -79,8 +80,8 @@ print("need GB = ", bit_num / 8 / 1024 / 1024 / 1024)
 **算法的具体实现，google已经给我们实现了，网上找个包就行了。  
 找包的同时发现了这个包的一个坑[google guava bloom filter包的坑](http://blog.csdn.net/inte_sleeper/article/details/11687707)，这个坑会对我们应用有影响么，思考后发现并没有，反而可能会有帮助，还是后面说。**
 
-这边我们先测试下，一亿的key，用布隆过滤器排重效率怎么样。  
-首先看下一亿个key，控制误判率p=0.00001，大概需要多少内存，跑下程序：
+这边我们先测试下，一亿的`key`，用布隆过滤器排重效率怎么样。  
+首先看下一亿个`key`，控制误判率`p=0.00001`，大概需要多少内存，跑下程序：
 
 ``` shell
 ./bloomfilter.py 
@@ -91,8 +92,8 @@ hash_num= (16.609640474436812+0j)
 need GB =  (0.278961913932797-0j)
 ```
 
-一亿Key判重，只要300M内存。
-开始吧，首先随机生成一亿个不重复key，这边预先用JAVA跑出一亿个UUID存在文件中，然后，使用布隆过滤器判重为重复的数据就认为是误判。测试代码如下:
+一亿`Key`判重，只要`300M`内存。
+开始吧，首先随机生成一亿个不重复`key`，这边预先用`JAVA`跑出一亿个`UUID`存在文件中，然后，使用布隆过滤器判重为重复的数据就认为是误判。测试代码如下:
 
 ``` java
 import com.google.common.base.Charsets;
@@ -169,18 +170,18 @@ cat time.txt
 
 1. 首先最上游有个分发线程，不断读话单文件，手机号取模（或者其他规则），扔到不同的通道里去。
 2. 每个通道有两个布隆过滤器，一个昨天的，一个今天的。取到话单，先判时间，时间是这两天的，进行判重，不是的直接扔给下游确认进程。
-3. 被判断为重单的话单也扔给下游确认进程（这里面含确实重复和误判，其中误判很小），判断为非重单的话单，直接写入HBase。
-4. 确认进程进行判重写入，这边随机读速度慢，最好想办法优化，是不是可以key攒起来排序之类的操作，多条一起查呢。
+3. 被判断为重单的话单也扔给下游确认进程（这里面含确实重复和误判，其中误判很小），判断为非重单的话单，直接写入`HBase`。
+4. 确认进程进行判重写入，这边随机读速度慢，最好想办法优化，是不是可以`key`攒起来排序之类的操作，多条一起查呢。
 5. 换天的时候，把两天前的布隆过滤器给清空。
 6. 若遇到宕机，今天的布隆过滤器重新搭建起来很简单，把已判数据在跑一边，分分钟的事情。
 
 **上面很多问题得到了解答，重单属于少数话单，那么时间的复杂程度增加不大的。另外算法另一个缺陷不支持删除数据的缺陷，我们这个场景不需要，要删也是按天全部清空。**
 
 #### 方案优势
-保证速度的前提下，异常省空间，就看重复话单的数量，HBase随机读那边的性能可以接受多少了。
+保证速度的前提下，异常省空间，就看重复话单的数量，`HBase`随机读那边的性能可以接受多少了。
 
 #### 方案缺陷
-很明显，要是重复话单多，大量重单压在HBase那边二次排重性能会比较差。
+很明显，要是重复话单多，大量重单压在`HBase`那边二次排重性能会比较差。
 
 ## 总结
 **重单数量少这个很关键，如果重单数量大到一定程度，那么这个省空间的方案性能会比较差了。**
