Markdown display error

--- a/content/post/2018-03-04-动态库调用静态库的问题.md
+++ b/content/post/2018-03-04-动态库调用静态库的问题.md
@@ -2,8 +2,8 @@
 title: "动态库调用静态库的问题"
 date: 2018-03-04T11:00:34+08:00
 draft: false
-tags: ["Cpp", "Dynamic"]
-categories: ["Cpp", "Dynamic"]
+tags: ["Cpp", "Link"]
+categories: ["Cpp", "Link"]
 ---
 
 # 动态库调用静态库的问题
