信息安全修改

--- a/content/post/2017-02-07-大数据话单排重任务.md
+++ b/content/post/2017-02-07-大数据话单排重任务.md
@@ -9,7 +9,7 @@ categories: ["Bigdata", "Hbase", "Coherence"]
 ## 起因
 昨天被领导拉去会议室，让帮忙抽空研究下`mongoDB`和`tair`两种`key/value`存储系统。简单地跟我讲了下要处理的问题，很多细节并没有和我说的很详细，主要的任务也只是想让我帮忙研究下两种存储系统的特点之后给他们汇报下，我就一知半解地接了这么个学习任务，所以之后博客开始会写点这方面的内容。
 ## 问题描述
-江苏移动每天会产生大概40亿的话单量（数据存疑，领导当时随口跟我一说，我没听清楚，反正数据不小），这些话单里会存在一些重复话单（重复的话单不会很多，但是时间在两个月范围内的话单都可能重复，说实话计费这边的业务接触的很少，这里让我不太理解，上游给我们的话单为啥时间跨度这么大），这个时候就面临了排重的问题，现网的做法是直接插入`oracle`数据库（大概是做了很多分表和分库吧），让唯一索引来控制话单的唯一性，比较简单，速度不理想。现在计费系统云化之后，也希望用新技术来优化这个问题的解决方案。
+局方每天会产生大概40亿的话单量（数据存疑，领导当时随口跟我一说，我没听清楚，反正数据不小），这些话单里会存在一些重复话单（重复的话单不会很多，但是时间在两个月范围内的话单都可能重复，说实话计费这边的业务接触的很少，这里让我不太理解，上游给我们的话单为啥时间跨度这么大），这个时候就面临了排重的问题，现网的做法是直接插入`oracle`数据库（大概是做了很多分表和分库吧），让唯一索引来控制话单的唯一性，比较简单，速度不理想。现在计费系统云化之后，也希望用新技术来优化这个问题的解决方案。
 
 <!--more-->
 
