信息安全修改

--- a/content/post/2017-02-19-关于海量话单排重问题的思考.md
+++ b/content/post/2017-02-19-关于海量话单排重问题的思考.md
@@ -11,7 +11,7 @@ categories: ["Bigdata", "Bloom Filter", "Hbase"]
 该问题的起因和描述都在两周前的这篇博文里[大数据话单排重任务
 ](http://www.qiubinren.com/blog/2017/02/%E5%A4%A7%E6%95%B0%E6%8D%AE%E8%AF%9D%E5%8D%95%E6%8E%92%E9%87%8D%E4%BB%BB%E5%8A%A1.html)。  
 这边再大概说下问题：每天60亿话单，里面有重单，现在要排重。  
-> 1.话单时间范围可能会出现上个月的话单，这类话单也要排重，所以至少存两个月的话单数据。  
+1.话单时间范围可能会出现上个月的话单，这类话单也要排重，所以至少存两个月的话单数据。  
 2.大部分话单其实都是当天的。
 
 跟两周前发的博客有区别，这次确认了上面两点需求，首先每天的话单量大概确认了，差不多是60亿每天，其次话单时间也确认了，大部分为当天，少量其他时间的数据。
