Markdown display error

--- a/content/post/2018-10-03-深入理解Docker技术本质.md
+++ b/content/post/2018-10-03-深入理解Docker技术本质.md
@@ -24,7 +24,7 @@ categories: ["Docker", "Container", "Kubernetes"]
 
 真的是这样吗？
 
-有没有过好奇，再轻量级的虚拟化技术，总会有一个拦截模拟的中间件，对运行信息的动态修改，包括cpu，内存，磁盘，网络。。。这么复杂的模拟怎么能够有网上吹嘘的一台主机跑10000个容器呢？
+有没有过好奇，再轻量级的虚拟化技术，总会有一个拦截模拟的中间件，对运行信息的动态修改，包括`cpu`，内存，磁盘，网络。。。这么复杂的模拟怎么能够有网上吹嘘的一台主机跑`10000`个容器呢？
 
 真的不是吹牛么？这是什么黑科技！！！
 
@@ -36,7 +36,7 @@ categories: ["Docker", "Container", "Kubernetes"]
 
 这很好理解，沙盒内的应用只能看到沙盒内的应用，看不到其他沙盒，也看不到外面，这是隔离。
 
-沙盒内的应用也只能使用沙盒给定的cpu资源，内存资源等系统资源，不能使用沙盒外的系统资源，也不能使用其他沙盒的系统资源，这是限制。
+沙盒内的应用也只能使用沙盒给定的`cpu`资源，内存资源等系统资源，不能使用沙盒外的系统资源，也不能使用其他沙盒的系统资源，这是限制。
 
 使用技术手段实现这两个能力就可以视为实现了容器。
 
