--- a/content/post/2019-06-21-Harbor1.8.1源码分析.md
+++ b/content/post/2019-06-21-Harbor1.8.1源码分析.md
@@ -1,7 +1,7 @@
 ---
 title: "Harbor1.8.1源码分析"
 date: 2019-07-05T17:22:15+08:00
-draft: false
+draft: true
 tags: ["Harbor", "Docker"]
 categories: ["Harbor", "Docker"]
 ---
